Started remaking the UI. Please do not clone the github repository until finished.

--- a/style.css
+++ b/style.css
@@ -1,583 +1,8 @@
 @charset "UTF-8";
-
 @import url("https://fonts.googleapis.com/css?family=Manrope:300,400,500,600,700&display=swap&subset=latin-ext");
-
-/*
-! tailwindcss v3.3.5 | MIT License | https://tailwindcss.com
-*/
-
-/*
-1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
-2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
-*/
-
-*,
-::before,
-::after {
-  box-sizing: border-box;
-  /* 1 */
-  border-width: 0;
-  /* 2 */
-  border-style: solid;
-  /* 2 */
-  border-color: #e5e7eb;
-  /* 2 */
-}
-
-::before,
-::after {
-  --tw-content: '';
-}
-
-/*
-1. Use a consistent sensible line-height in all browsers.
-2. Prevent adjustments of font size after orientation changes in iOS.
-3. Use a more readable tab size.
-4. Use the user's configured `sans` font-family by default.
-5. Use the user's configured `sans` font-feature-settings by default.
-6. Use the user's configured `sans` font-variation-settings by default.
-*/
-
-html {
-  line-height: 1.5;
-  /* 1 */
-  -webkit-text-size-adjust: 100%;
-  /* 2 */
-  -moz-tab-size: 4;
-  /* 3 */
-  -o-tab-size: 4;
-     tab-size: 4;
-  /* 3 */
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  /* 4 */
-  font-feature-settings: normal;
-  /* 5 */
-  font-variation-settings: normal;
-  /* 6 */
-}
-
-/*
-1. Remove the margin in all browsers.
-2. Inherit line-height from `html` so users can set them as a class directly on the `html` element.
-*/
-
-body {
-  margin: 0;
-  /* 1 */
-  line-height: inherit;
-  /* 2 */
-}
-
-/*
-1. Add the correct height in Firefox.
-2. Correct the inheritance of border color in Firefox. (https://bugzilla.mozilla.org/show_bug.cgi?id=190655)
-3. Ensure horizontal rules are visible by default.
-*/
-
-hr {
-  height: 0;
-  /* 1 */
-  color: inherit;
-  /* 2 */
-  border-top-width: 1px;
-  /* 3 */
-}
-
-/*
-Add the correct text decoration in Chrome, Edge, and Safari.
-*/
-
-abbr:where([title]) {
-  -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
-}
-
-/*
-Remove the default font size and weight for headings.
-*/
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-size: inherit;
-  font-weight: inherit;
-}
-
-/*
-Reset links to optimize for opt-in styling instead of opt-out.
-*/
-
-a {
-  color: inherit;
-  text-decoration: inherit;
-}
-
-/*
-Add the correct font weight in Edge and Safari.
-*/
-
-b,
-strong {
-  font-weight: bolder;
-}
-
-/*
-1. Use the user's configured `mono` font family by default.
-2. Correct the odd `em` font sizing in all browsers.
-*/
-
-code,
-kbd,
-samp,
-pre {
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
-}
-
-/*
-Add the correct font size in all browsers.
-*/
-
-small {
-  font-size: 80%;
-}
-
-/*
-Prevent `sub` and `sup` elements from affecting the line height in all browsers.
-*/
-
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-/*
-1. Remove text indentation from table contents in Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=999088, https://bugs.webkit.org/show_bug.cgi?id=201297)
-2. Correct table border color inheritance in all Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=935729, https://bugs.webkit.org/show_bug.cgi?id=195016)
-3. Remove gaps between table borders by default.
-*/
-
-table {
-  text-indent: 0;
-  /* 1 */
-  border-color: inherit;
-  /* 2 */
-  border-collapse: collapse;
-  /* 3 */
-}
-
-/*
-1. Change the font styles in all browsers.
-2. Remove the margin in Firefox and Safari.
-3. Remove default padding in all browsers.
-*/
-
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit;
-  /* 1 */
-  font-feature-settings: inherit;
-  /* 1 */
-  font-variation-settings: inherit;
-  /* 1 */
-  font-size: 100%;
-  /* 1 */
-  font-weight: inherit;
-  /* 1 */
-  line-height: inherit;
-  /* 1 */
-  color: inherit;
-  /* 1 */
-  margin: 0;
-  /* 2 */
-  padding: 0;
-  /* 3 */
-}
-
-/*
-Remove the inheritance of text transform in Edge and Firefox.
-*/
-
-button,
-select {
-  text-transform: none;
-}
-
-/*
-1. Correct the inability to style clickable types in iOS and Safari.
-2. Remove default button styles.
-*/
-
-button,
-[type='button'],
-[type='reset'],
-[type='submit'] {
-  -webkit-appearance: button;
-  /* 1 */
-  background-color: transparent;
-  /* 2 */
-  background-image: none;
-  /* 2 */
-}
-
-/*
-Use the modern Firefox focus style for all focusable elements.
-*/
-
-:-moz-focusring {
-  outline: auto;
-}
-
-/*
-Remove the additional `:invalid` styles in Firefox. (https://github.com/mozilla/gecko-dev/blob/2f9eacd9d3d995c937b4251a5557d95d494c9be1/layout/style/res/forms.css#L728-L737)
-*/
-
-:-moz-ui-invalid {
-  box-shadow: none;
-}
-
-/*
-Add the correct vertical alignment in Chrome and Firefox.
-*/
-
-progress {
-  vertical-align: baseline;
-}
-
-/*
-Correct the cursor style of increment and decrement buttons in Safari.
-*/
-
-::-webkit-inner-spin-button,
-::-webkit-outer-spin-button {
-  height: auto;
-}
-
-/*
-1. Correct the odd appearance in Chrome and Safari.
-2. Correct the outline style in Safari.
-*/
-
-[type='search'] {
-  -webkit-appearance: textfield;
-  /* 1 */
-  outline-offset: -2px;
-  /* 2 */
-}
-
-/*
-Remove the inner padding in Chrome and Safari on macOS.
-*/
-
-::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/*
-1. Correct the inability to style clickable types in iOS and Safari.
-2. Change font properties to `inherit` in Safari.
-*/
-
-::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  /* 1 */
-  font: inherit;
-  /* 2 */
-}
-
-/*
-Add the correct display in Chrome and Safari.
-*/
-
-summary {
-  display: list-item;
-}
-
-/*
-Removes the default spacing and border for appropriate elements.
-*/
-
-blockquote,
-dl,
-dd,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-hr,
-figure,
-p,
-pre {
-  margin: 0;
-}
-
-fieldset {
-  margin: 0;
-  padding: 0;
-}
-
-legend {
-  padding: 0;
-}
-
-ol,
-ul,
-menu {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-/*
-Reset default styling for dialogs.
-*/
-
-dialog {
-  padding: 0;
-}
-
-/*
-Prevent resizing textareas horizontally by default.
-*/
-
-textarea {
-  resize: vertical;
-}
-
-/*
-1. Reset the default placeholder opacity in Firefox. (https://github.com/tailwindlabs/tailwindcss/issues/3300)
-2. Set the default placeholder color to the user's configured gray 400 color.
-*/
-
-input::-moz-placeholder, textarea::-moz-placeholder {
-  opacity: 1;
-  /* 1 */
-  color: #9ca3af;
-  /* 2 */
-}
-
-input::placeholder,
-textarea::placeholder {
-  opacity: 1;
-  /* 1 */
-  color: #9ca3af;
-  /* 2 */
-}
-
-/*
-Set the default cursor for buttons.
-*/
-
-button,
-[role="button"] {
-  cursor: pointer;
-}
-
-/*
-Make sure disabled buttons don't get the pointer cursor.
-*/
-
-:disabled {
-  cursor: default;
-}
-
-/*
-1. Make replaced elements `display: block` by default. (https://github.com/mozdevs/cssremedy/issues/14)
-2. Add `vertical-align: middle` to align replaced elements more sensibly by default. (https://github.com/jensimmons/cssremedy/issues/14#issuecomment-634934210)
-   This can trigger a poorly considered lint error in some tools but is included by design.
-*/
-
-img,
-svg,
-video,
-canvas,
-audio,
-iframe,
-embed,
-object {
-  display: block;
-  /* 1 */
-  vertical-align: middle;
-  /* 2 */
-}
-
-/*
-Constrain images and videos to the parent width and preserve their intrinsic aspect ratio. (https://github.com/mozdevs/cssremedy/issues/14)
-*/
-
-img,
-video {
-  max-width: 100%;
-  height: auto;
-}
-
-/* Make elements with the HTML hidden attribute stay hidden by default */
-
-[hidden] {
-  display: none;
-}
-
-*, ::before, ::after{
-  --tw-border-spacing-x: 0;
-  --tw-border-spacing-y: 0;
-  --tw-translate-x: 0;
-  --tw-translate-y: 0;
-  --tw-rotate: 0;
-  --tw-skew-x: 0;
-  --tw-skew-y: 0;
-  --tw-scale-x: 1;
-  --tw-scale-y: 1;
-  --tw-pan-x:  ;
-  --tw-pan-y:  ;
-  --tw-pinch-zoom:  ;
-  --tw-scroll-snap-strictness: proximity;
-  --tw-gradient-from-position:  ;
-  --tw-gradient-via-position:  ;
-  --tw-gradient-to-position:  ;
-  --tw-ordinal:  ;
-  --tw-slashed-zero:  ;
-  --tw-numeric-figure:  ;
-  --tw-numeric-spacing:  ;
-  --tw-numeric-fraction:  ;
-  --tw-ring-inset:  ;
-  --tw-ring-offset-width: 0px;
-  --tw-ring-offset-color: #fff;
-  --tw-ring-color: rgb(59 130 246 / 0.5);
-  --tw-ring-offset-shadow: 0 0 #0000;
-  --tw-ring-shadow: 0 0 #0000;
-  --tw-shadow: 0 0 #0000;
-  --tw-shadow-colored: 0 0 #0000;
-  --tw-blur:  ;
-  --tw-brightness:  ;
-  --tw-contrast:  ;
-  --tw-grayscale:  ;
-  --tw-hue-rotate:  ;
-  --tw-invert:  ;
-  --tw-saturate:  ;
-  --tw-sepia:  ;
-  --tw-drop-shadow:  ;
-  --tw-backdrop-blur:  ;
-  --tw-backdrop-brightness:  ;
-  --tw-backdrop-contrast:  ;
-  --tw-backdrop-grayscale:  ;
-  --tw-backdrop-hue-rotate:  ;
-  --tw-backdrop-invert:  ;
-  --tw-backdrop-opacity:  ;
-  --tw-backdrop-saturate:  ;
-  --tw-backdrop-sepia:  ;
-}
-
-::backdrop{
-  --tw-border-spacing-x: 0;
-  --tw-border-spacing-y: 0;
-  --tw-translate-x: 0;
-  --tw-translate-y: 0;
-  --tw-rotate: 0;
-  --tw-skew-x: 0;
-  --tw-skew-y: 0;
-  --tw-scale-x: 1;
-  --tw-scale-y: 1;
-  --tw-pan-x:  ;
-  --tw-pan-y:  ;
-  --tw-pinch-zoom:  ;
-  --tw-scroll-snap-strictness: proximity;
-  --tw-gradient-from-position:  ;
-  --tw-gradient-via-position:  ;
-  --tw-gradient-to-position:  ;
-  --tw-ordinal:  ;
-  --tw-slashed-zero:  ;
-  --tw-numeric-figure:  ;
-  --tw-numeric-spacing:  ;
-  --tw-numeric-fraction:  ;
-  --tw-ring-inset:  ;
-  --tw-ring-offset-width: 0px;
-  --tw-ring-offset-color: #fff;
-  --tw-ring-color: rgb(59 130 246 / 0.5);
-  --tw-ring-offset-shadow: 0 0 #0000;
-  --tw-ring-shadow: 0 0 #0000;
-  --tw-shadow: 0 0 #0000;
-  --tw-shadow-colored: 0 0 #0000;
-  --tw-blur:  ;
-  --tw-brightness:  ;
-  --tw-contrast:  ;
-  --tw-grayscale:  ;
-  --tw-hue-rotate:  ;
-  --tw-invert:  ;
-  --tw-saturate:  ;
-  --tw-sepia:  ;
-  --tw-drop-shadow:  ;
-  --tw-backdrop-blur:  ;
-  --tw-backdrop-brightness:  ;
-  --tw-backdrop-contrast:  ;
-  --tw-backdrop-grayscale:  ;
-  --tw-backdrop-hue-rotate:  ;
-  --tw-backdrop-invert:  ;
-  --tw-backdrop-opacity:  ;
-  --tw-backdrop-saturate:  ;
-  --tw-backdrop-sepia:  ;
-}
-
-.visible{
-  visibility: visible;
-}
-
-.fixed{
-  position: fixed;
-}
-
-.block{
-  display: block;
-}
-
-.flex{
-  display: flex;
-}
-
-.table{
-  display: table;
-}
-
-.grid{
-  display: grid;
-}
-
-.transform{
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.outline{
-  outline-style: solid;
-}
-
-.filter{
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.ease-out{
-  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
-}
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 :root {
   --dl-color-gray-500: #595959;
   --dl-color-gray-700: #999999;
@@ -614,7 +39,6 @@ video {
   --dl-space-space-threeunits: 48px;
   --dl-space-space-oneandhalfunits: 24px;
 }
-
 .button {
   color: var(--dl-color-gray-black);
   display: inline-block;
@@ -624,7 +48,6 @@ video {
   border-radius: 4px;
   background-color: var(--dl-color-gray-white);
 }
-
 .input {
   color: var(--dl-color-gray-black);
   cursor: auto;
@@ -634,7 +57,6 @@ video {
   border-radius: 4px;
   background-color: var(--dl-color-gray-white);
 }
-
 .textarea {
   color: var(--dl-color-gray-black);
   cursor: auto;
@@ -644,7 +66,6 @@ video {
   border-radius: 4px;
   background-color: var(--dl-color-gray-white);
 }
-
 .list {
   width: 100%;
   margin: 1em 0px 1em 0px;
@@ -653,16 +74,13 @@ video {
   list-style-type: none;
   list-style-position: outside;
 }
-
 .list-item {
   display: list-item;
 }
-
 .teleport-show {
   display: flex !important;
   transform: none !important;
 }
-
 .Content {
   font-size: 16px;
   font-family: Inter;
@@ -671,7 +89,6 @@ video {
   text-transform: none;
   text-decoration: none;
 }
-
 .Heading {
   font-size: 32px;
   font-family: Inter;
@@ -680,7 +97,6 @@ video {
   text-transform: none;
   text-decoration: none;
 }
-
 .main-container {
   width: 100%;
   display: flex;
@@ -690,7 +106,6 @@ video {
   flex-direction: column;
   justify-content: center;
 }
-
 .main-main {
   width: 100%;
   height: 1080px;
@@ -701,7 +116,6 @@ video {
   flex-shrink: 0;
   background-color: rgba(63, 63, 63, 1);
 }
-
 .main-vector {
   top: 0.1529541015625px;
   left: 0.75244140625px;
@@ -709,7 +123,6 @@ video {
   height: 100%;
   position: absolute;
 }
-
 .main-icdropdown {
   top: 28.5px;
   left: 330px;
@@ -717,7 +130,6 @@ video {
   height: 4px;
   position: absolute;
 }
-
 .main-text {
   top: 20.5px;
   left: 84.71009063720703px;
@@ -733,7 +145,6 @@ video {
   font-stretch: normal;
   text-decoration: none;
 }
-
 .main-frame1 {
   gap: 13px;
   top: 14px;
@@ -744,7 +155,6 @@ video {
   align-items: flex-start;
   flex-direction: column;
 }
-
 .main-group4 {
   width: 42px;
   height: 42px;
@@ -755,7 +165,6 @@ video {
   border-radius: 10px;
   background-color: rgba(43, 57, 57, 1);
 }
-
 .main-vector1 {
   top: 10.5691499710083px;
   left: 11.0908203125px;
@@ -763,7 +172,6 @@ video {
   height: 21px;
   position: absolute;
 }
-
 .main-group3 {
   width: 42px;
   height: 42px;
@@ -774,7 +182,6 @@ video {
   border-radius: 10px;
   background-color: rgba(43, 57, 57, 1);
 }
-
 .main-userssolid1 {
   top: 11.5px;
   left: 9px;
@@ -786,7 +193,6 @@ video {
   align-items: flex-start;
   flex-shrink: 0;
 }
-
 .main-vector2 {
   top: 11.981684684753418px;
   left: 7.981201171875px;
@@ -794,7 +200,6 @@ video {
   height: 18px;
   position: absolute;
 }
-
 .main-frame2 {
   gap: 12px;
   top: 128px;
@@ -806,7 +211,6 @@ video {
   flex-direction: column;
   justify-content: center;
 }
-
 .main-group41 {
   width: 40px;
   height: 39.8590087890625px;
@@ -815,7 +219,6 @@ video {
   align-items: flex-start;
   flex-shrink: 1;
 }
-
 .main-rectangle7 {
   top: 2.9010913372039795px;
   left: 0px;
@@ -827,7 +230,6 @@ video {
   box-sizing: content-box;
   border-radius: 8.91963005065918px;
 }
-
 .main-group5 {
   width: 40px;
   height: 39.86000061035156px;
@@ -836,7 +238,6 @@ video {
   align-items: flex-start;
   flex-shrink: 1;
 }
-
 .main-rectangle71 {
   top: 0px;
   left: 0px;
@@ -846,7 +247,6 @@ video {
   box-sizing: content-box;
   border-radius: 12.625933647155762px;
 }
-
 .main-group6 {
   width: 40px;
   height: 39.86000061035156px;
@@ -855,7 +255,6 @@ video {
   align-items: flex-start;
   flex-shrink: 1;
 }
-
 .main-rectangle72 {
   top: 0px;
   left: 0px;
@@ -865,7 +264,6 @@ video {
   box-sizing: content-box;
   border-radius: 11px;
 }
-
 .main-line {
   top: 0px;
   left: 67px;
@@ -874,7 +272,6 @@ video {
   opacity: 0.10;
   position: absolute;
 }
-
 .main-line1 {
   top: 0px;
   left: 0px;
@@ -883,7 +280,6 @@ video {
   opacity: 0.10;
   position: absolute;
 }
-
 .main-vector1 {
   top: 120.7099609375px;
   left: 18.94677734375px;
@@ -891,7 +287,6 @@ video {
   height: 1px;
   position: absolute;
 }
-
 .main-rectangle8 {
   top: 1029.300537109375px;
   left: 16.172607421875px;
@@ -904,7 +299,6 @@ video {
   border-width: 3px;
   border-radius: 37px;
 }
-
 .main-group9 {
   top: 75px;
   left: 84px;
@@ -915,7 +309,6 @@ video {
   align-items: flex-start;
   flex-shrink: 1;
 }
-
 .main-icdropdown1 {
   top: 6px;
   left: 248px;
@@ -923,7 +316,6 @@ video {
   height: 3px;
   position: absolute;
 }
-
 .main-text02 {
   color: rgba(198, 198, 198, 1);
   width: 105px;
@@ -938,7 +330,6 @@ video {
   font-stretch: normal;
   text-decoration: none;
 }
-
 .main-group11 {
   top: 217px;
   left: 84px;
@@ -949,7 +340,6 @@ video {
   align-items: flex-start;
   flex-shrink: 1;
 }
-
 .main-icdropdown2 {
   top: -40px;
   left: 248px;
@@ -957,7 +347,6 @@ video {
   height: 3px;
   position: absolute;
 }
-
 .main-text04 {
   top: -44px;
   left: 0px;
@@ -974,7 +363,6 @@ video {
   font-stretch: normal;
   text-decoration: none;
 }
-
 .main-frame {
   gap: 15px;
   top: 200px;
@@ -985,7 +373,6 @@ video {
   align-items: flex-start;
   flex-direction: column;
 }
-
 .main-group7 {
   width: 131px;
   height: 14.838567733764648px;
@@ -994,7 +381,6 @@ video {
   align-items: flex-start;
   flex-shrink: 1;
 }
-
 .main-container1 {
   width: 13px;
   height: 11.609375px;
@@ -1002,7 +388,6 @@ video {
   position: relative;
   align-items: flex-start;
 }
-
 .main-container2 {
   top: 5px;
   left: 7px;
@@ -1011,7 +396,6 @@ video {
   position: absolute;
   align-items: flex-start;
 }
-
 .main-rectangle5 {
   top: -3px;
   left: -4px;
@@ -1019,12 +403,10 @@ video {
   height: 9px;
   position: absolute;
 }
-
 .main-rectangle4 {
   width: 9px;
   height: 9px;
 }
-
 .main-text05 {
   left: 24.52392578125px;
   color: rgb(193, 193, 193);
@@ -1040,7 +422,6 @@ video {
   font-stretch: normal;
   text-decoration: none;
 }
-
 .main-group71 {
   width: 131px;
   height: 14.838567733764648px;
@@ -1049,7 +430,6 @@ video {
   align-items: flex-start;
   flex-shrink: 1;
 }
-
 .main-container3 {
   width: 13px;
   height: 11.609375px;
@@ -1057,7 +437,6 @@ video {
   position: relative;
   align-items: flex-start;
 }
-
 .main-container4 {
   top: 5px;
   left: 7px;
@@ -1066,7 +445,6 @@ video {
   position: absolute;
   align-items: flex-start;
 }
-
 .main-rectangle51 {
   top: -3px;
   left: -4px;
@@ -1074,12 +452,10 @@ video {
   height: 9px;
   position: absolute;
 }
-
 .main-rectangle41 {
   width: 9px;
   height: 9px;
 }
-
 .main-text06 {
   left: 24.52392578125px;
   color: rgb(193, 193, 193);
@@ -1095,7 +471,6 @@ video {
   font-stretch: normal;
   text-decoration: none;
 }
-
 .main-frame7 {
   gap: 15px;
   top: 104.27001953125px;
@@ -1106,7 +481,6 @@ video {
   align-items: flex-start;
   flex-direction: column;
 }
-
 .main-group8 {
   width: 130px;
   height: 14.8385009765625px;
@@ -1115,7 +489,6 @@ video {
   align-items: flex-start;
   flex-shrink: 1;
 }
-
 .main-group13 {
   top: 1.7822265625px;
   left: 4px;
@@ -1126,7 +499,6 @@ video {
   align-items: flex-start;
   flex-shrink: 1;
 }
-
 .main-group12 {
   top: 0px;
   left: 0px;
@@ -1137,7 +509,6 @@ video {
   align-items: flex-start;
   flex-shrink: 1;
 }
-
 .main-vector3 {
   top: 7.1884942054748535px;
   left: 3.0967347621917725px;
@@ -1145,7 +516,6 @@ video {
   height: 4px;
   position: absolute;
 }
-
 .main-vector2 {
   top: 0px;
   left: -1px;
@@ -1153,7 +523,6 @@ video {
   height: 11px;
   position: absolute;
 }
-
 .main-ellipse1 {
   top: 1px;
   left: 9px;
@@ -1161,7 +530,6 @@ video {
   height: 9px;
   position: absolute;
 }
-
 .main-text07 {
   left: 24.152122497558594px;
   color: rgba(193, 193, 193, 1);
@@ -1177,7 +545,6 @@ video {
   font-stretch: normal;
   text-decoration: none;
 }
-
 .main-group72 {
   width: 131px;
   height: 14.838567733764648px;
@@ -1186,7 +553,6 @@ video {
   align-items: flex-start;
   flex-shrink: 1;
 }
-
 .main-container5 {
   width: 13px;
   height: 11.609375px;
@@ -1194,7 +560,6 @@ video {
   position: relative;
   align-items: flex-start;
 }
-
 .main-container6 {
   top: 5px;
   left: 7px;
@@ -1203,7 +568,6 @@ video {
   position: absolute;
   align-items: flex-start;
 }
-
 .main-rectangle52 {
   top: -3px;
   left: -4px;
@@ -1211,12 +575,10 @@ video {
   height: 9px;
   position: absolute;
 }
-
 .main-rectangle42 {
   width: 9px;
   height: 9px;
 }
-
 .main-text09 {
   left: 24.52392578125px;
   color: rgb(193, 193, 193);
